    GET-MACRO-CHARACTER.
  * fixed bug: initialization of condition class metaobjects no longer
    causes an instance of the condition to be created.  (reported by
    Marco Baringer)
  * fixed bug: it is now possible to have slots such that
    SB-MOP:SLOT-DEFINITION-ALLOCATION of the effective slot
    description is neither :INSTANCE nor :CLASS.

changes in sbcl-0.8.12 relative to sbcl-0.8.11:
  * minor incompatible change: the system no longer provides
    optimization hints (conditions which are TYPEP
    SB-EXT:COMPILER-NOTE) for conforming code in default compilation
    mode; these hints are still emitted when higher SPEED optimization
    is requested.
  * new contrib module: a sampling profiler (profiling by statistical
    sampling, rather than by instrumenting functions) is available as
    the SB-SPROF contrib.  (thanks to Gerd Moellmann and Juho Snellman)
  * the behaviour of the standard function ED is now customizeable by
    third parties through a hook variable: see ED's documentation
    string for information on the protocol.
  * the compiler no longer emits efficiency notes for (FUNCALL X)
    when the type of X is uncertain under default optimization
    settings.
  * fixed bug 276: mutating a binding of a specialized parameter to a
    method to something that is not TYPEP the specializer is now
    possible.
  * fixed bugs 45d and 118: DOUBLE-FLOAT[-NEGATIVE]-EPSILON now
    exhibit the required behaviour on the x86 platform.  (thanks to
    Peter van Eynde, Eric Marsden and Bruno Haible)
  * fixed bug 335: ATANH now computes the inverse hyperbolic tangent
    even for difficult arguments.  (reported by Peter Graves)
  * fixed bug 141a: the backquote printer now descends quoted
    structure.
  * fixed another bug in backquote printing: no more destructive
    modification of the form's list structure.  (reported by Brian
    Downing)
  * fixed bug in INTERRUPT-THREAD: pin the function, so that it cannot